--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -53,12 +53,14 @@ This rewarding system is inherently built into human beings that motivate us to 
 
 ### Initial learning phase.
 <div class="col-md-7">
-<p style="text-align:justify"> At the initial stages of the learning to walk, the robot takes baby steps and eventually fails a lot of times by falling down. The reward function is modelled accordingly by this inference so that the robot moves forward while maintaining constant waist-height from the ground to maximize the reward for each iteration.</p>
+<p style="text-align:justify"> At the initial stages of the learning to walk, the robot takes baby steps and eventually fails a lot of times by falling down. The reward function is modelled accordingly by this inference so that the robot moves forward while maintaining constant waist-height from the ground to maximize the reward for each iteration.
+
 <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/biped_training.gif"/>
-      <figcaption><font size="0.5">Motion capture recording of a human walking gait.</font></figcaption>
+      <figcaption><font size="0.5">Initial learning phase.</font></figcaption>
+  </div>
 </div>
-</div>
+</p>
 <!-- <img src="https://nav74neet.github.io/media/biped_training.gif" alt="DDPG" style="border:2px solid black;" align="middle">
 <figcaption><font size="0.5" align="center">The initial learning phase.</font></figcaption>
 </p> -->
