--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -71,7 +71,7 @@ This rewarding system is inherently built into human beings that motivate us to 
 ## Results & comparison with an actual human gait.
 <div class="row">
     <div class="col-md-7">
-      <p style="text-align:justify"> Our model learned to generate a stable walking gait after roughly over 41 hours of training (using a Nvidia GeForce GTX 1050 Ti GPU). Though the problem of convergence of the learning still persists with the DDPG algorithm, we were able to get a bipedal gait which was similar to that of a human's. The human gait was synthezised & derived using optical motion capture camera setup at the Advanced Flight Simulation Laboratory, Dept. of Aerospace Engineering, IISc. The half-body marker placement convention was adopted while recording the subject's walking gait.</p> 
+      <p style="text-align:justify"> Our model learned to generate a stable walking gait after roughly over 41 hours of training (using a Nvidia GeForce GTX 1050 Ti GPU). Though the problem of convergence of the learning still persists with the DDPG algorithm, we were able to get a bipedal gait which was similar to that of a human's. The human gait was synthezised & derived using optical motion capture camera setup at the Advanced Flight Simulation Laboratory, Dept. of Aerospace Engineering, IISc. The half-body marker placement convention was adopted while recording the subject's walking gait. The hip & knee joint rotations of the human subject and the bipedal walker were gathered and the subsequent plots were generated, depicting similarities in patterns.</p> 
     </div>
   <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/biped_trained.gif"/>
@@ -79,12 +79,10 @@ This rewarding system is inherently built into human beings that motivate us to 
   </div>
 
   <div class="col-md-5">
-      <img class="rimg" src="{{ site.github.url }}/media/blog/motive.gif"/>
+      <img class="rimg" src="{{ site.github.url }}/media/blog/motive2.gif"/>
       <figcaption><font size="0.5">Motion capture recording of a human walking gait.</font></figcaption>
   </div>
 </div>
-
-<p style="text-align:justify"> The hip & knee joint rotations of the human subject and the bipedal walker were gathered and the subsequent plots were generated, depicting similarities in patterns.</p>
 
 <!-- <div class="row">
 <div class="col-md-5">
