--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -71,7 +71,7 @@ This rewarding system is inherently built into human beings that motivate us to 
 ## Results & comparison with an actual human gait.
 <div class="row">
     <div class="col-md-7">
-      <p style="text-align:justify"> Our model learned to generate a stable walking gait after roughly over 41 hours of training (using a Nvidia GeForce GTX 1050 Ti GPU). Though the problem of convergence of the learning still persists with the DDPG algorithm, we were able to get a bipedal gait which was similar to that of a human's. The human gait was synthezised & derived using optical motion capture camera setup at the Advanced Flight Simulation Laboratory, Dept. of Aerospace Engineering, IISc. The half-body marker placement convention was adopted while recording the subject's walking gait. The hip & knee joint rotations of the human subject and the bipedal walker were gathered and the subsequent plots were generated, depicting similarities in patterns.</p> 
+      <p style="text-align:justify"> Our model learned to generate a stable walking gait after roughly over 41 hours of training (using a Nvidia GeForce GTX 1050 Ti GPU). After training the model in simulation, it was observed that, with a proper shaped reward function, the robot achieved faster walking (or even rendered a running gait) with an average speed of 0.83 m/s. Though the problem of convergence of the learning still persists with the DDPG algorithm, we were able to get a bipedal gait which was similar to that of a human's. The human gait was synthezised & derived using optical motion capture camera setup at the Advanced Flight Simulation Laboratory, Dept. of Aerospace Engineering, IISc. The half-body marker placement convention was adopted while recording the subject's walking gait. The hip & knee joint rotations of the human subject and the bipedal walker were gathered and the subsequent plots were generated, depicting similarities in patterns.</p> 
     </div>
   <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/biped_trained.gif"/>
@@ -83,6 +83,17 @@ This rewarding system is inherently built into human beings that motivate us to 
       <figcaption><font size="0.5">Motion capture recording of a human walking gait.</font></figcaption>
   </div>
 </div>
+
+<!-- <center>
+            <div class="image-wrapper">
+                <a class ="image-popup" href="https://nav74neet.github.io/media/trained.gif" title="DDPG">
+                    <img src="https://nav74neet.github.io/media/trained.gif" alt="DDPG" style="border:2px solid black;" align="left">
+                </a>
+                <p class="image-caption" style="font-size:14px; text-align: center;">
+                    Fig. 2 Stable Bipedal walking robot.
+                </p>
+            </div>
+</center> -->
 
 <!-- <div class="row">
 <div class="col-md-5">
