--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -84,6 +84,29 @@ This rewarding system is inherently built into human beings that motivate us to 
   </div>
 </div>
 
+### Comparisons:
+
+<div class="row">
+  <div class="col-md-5">
+      <img class="rimg" src="{{ site.github.url }}/media/blog/biped_hip.png"/>
+      <figcaption><font size="0.5">Hip joint rotation trajectory for biped robot.</font></figcaption>
+  </div>
+  <div class="col-md-5">
+      <img class="limg" src="{{ site.github.url }}/media/blog/human_hip.png"/>
+      <figcaption><font size="0.5">Hip joint rotation trajectory for human.</font></figcaption>
+  </div>
+</div>
+<br>
+<div class="row">
+  <div class="col-md-5">
+      <img class="rimg" src="{{ site.github.url }}/media/blog/biped_knee.png"/>
+      <figcaption><font size="0.5">Knee joint rotation trajectory for biped robot.</font></figcaption>
+  </div>
+  <div class="col-md-5">
+      <img class="limg" src="{{ site.github.url }}/media/blog/human_knee.png"/>
+      <figcaption><font size="0.5">Knee joint rotation trajectory for human.</font></figcaption>
+  </div>
+</div>
 <!-- <center>
             <div class="image-wrapper">
                 <a class ="image-popup" href="https://nav74neet.github.io/media/trained.gif" title="DDPG">
