--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -89,24 +89,30 @@ This rewarding system is inherently built into human beings that motivate us to 
 <div class="row">
   <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/biped_hip.png"/>
-      <p class="image-caption" style="font-size:14px; text-align: center;">
+      <p class="image-caption" style="font-size:0.5px; text-align: center;">
                     Hip joint rotation trajectory for biped robot.
       </p>
   </div>
   <div class="col-md-5">
       <img class="limg" src="{{ site.github.url }}/media/blog/human_hip.png"/>
-      <figcaption><font size="0.5">Hip joint rotation trajectory for human.</font></figcaption>
+      <p class="image-caption" style="font-size:0.5px; text-align: center;">
+                    Hip joint rotation trajectory for human walking.
+      </p>
   </div>
 </div>
 <br>
 <div class="row">
   <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/biped_knee.png"/>
-      <figcaption><font size="0.5">Knee joint rotation trajectory for biped robot.</font></figcaption>
+      <p class="image-caption" style="font-size:0.5px; text-align: center;">
+                    Knee joint rotation trajectory for biped robot.
+      </p>
   </div>
   <div class="col-md-5">
       <img class="limg" src="{{ site.github.url }}/media/blog/human_knee.png"/>
-      <figcaption><font size="0.5">Knee joint rotation trajectory for human.</font></figcaption>
+      <p class="image-caption" style="font-size:0.5px; text-align: center;">
+                    Hip joint rotation trajectory for human walking.
+      </p>
   </div>
 </div>
 <!-- <center>
