--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -47,9 +47,17 @@ This rewarding system is inherently built into human beings that motivate us to 
 ### Deep Determinsitic Policy Gradient.
 <p style="txt-align:justify">In 2016, researchers from Google DeepMind, London, published their results related to "<b><a href="https://arxiv.org/pdf/1509.02971.pdf" class="md-link">Continuos Control with Deep Reinforcement Learning</a></b>" in ICLR. The learning framework is based on the <b>actor-critic network</b></p> 
 <p>
-<img src="https://nav74neet.github.io/media/blog/ac_network.jpg" alt="AC" align="center">
+
+<div class="row">
+  <div class="col-md-12">
+      <img class="rimg" src="{{ site.github.url }}/media/blog/ac_network.jpg"/>
+      <p class="image-caption" style="font-size:10px; text-align: center;">
+                    Actor-Critic network model.
+      </p>
+</div>
+<!-- <img src="https://nav74neet.github.io/media/blog/ac_network.jpg" alt="AC" align="center">
 <figcaption><font size="0.5" align="center">Actor-Critic network model.</font></figcaption>
-</p>
+</p> -->
 
 ### Initial learning phase.
 <div class="row">
@@ -142,7 +150,7 @@ This rewarding system is inherently built into human beings that motivate us to 
 
 <div class="row">
     <div class="col-md-7">
-      <p style="text-align:justify"> <b>NeurIPS "Learning to run" challenge:</b> Over the past two years NeurIPS, [formerly known as NIPS] has been hosting the online "Learning to run" challenge, where the participants have to train a musculoskeletal model in Opensim simulation environment to run at a particular speed and avoid obstacles at the same time.[<a href="https://www.crowdai.org/challenges/nips-2018-ai-for-prosthetics-challenge" class="md-link">NeurIPS, 2018 challenge</a>][<a href="https://github.com/stanfordnmbl/osim-rl" class="md-link">repository</a>]</p> 
+      <p style="text-align:justify"> <b>NeurIPS "Learning to run" challenge:</b> Over the past two years NeurIPS, [formerly known as NIPS] has been hosting the online "Learning to run" challenge, where the contestents have to train a musculoskeletal model in Opensim simulation environment to run at a particular speed and avoid obstacles at the same time.[<a href="https://www.crowdai.org/challenges/nips-2018-ai-for-prosthetics-challenge" class="md-link">NeurIPS, 2018 challenge</a>][<a href="https://github.com/stanfordnmbl/osim-rl" class="md-link">repository</a>]</p> 
     </div>
   <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/NIPS.gif"/>
